<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ticketreservation.MainActivity"
    android:clickable="true">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_ticket"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:id="@+id/button_create" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/edit_ticket"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:id="@+id/button_edit" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_ticket"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:id="@+id/button_delete" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_ticket"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:id="@+id/button_view" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_booking"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:id="@+id/button_finish" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/customer_care"
        android:id="@+id/textView_customerCare"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:textColor="@color/blue"
        android:textSize="25sp"
        />


</LinearLayout>
